--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "OneTab",
+  "name": "BetterBookmark",
   "version": "1.0",
-  "description": "One place to store all the tabs.",
+  "description": "An improved bookmarking system iwth a dedicated page for grouping and sorting bookmarks.",
   "permissions":
   [
     "tabs",
@@ -12,18 +12,18 @@
   {
     "gecko": 
     {
-      "id": "sharpshooter908@gmail.com",
+      "id": "sharpshooter999@gmail.com",
       "strict_min_version": "42.0"
     }
   },  
   "browser_action":
   {
-    "default_icon": "/icons/one-tab-96.png",
-    "default_title": "OneTab",
+    "default_icon": "/icons/better-bookmark-96.png",
+    "default_title": "BetterBookmark",
     "default_popup": "popup/popup.html"
   },
   "icons": 
   {
-    "96": "icons/one-tab-96.png"
+    "96": "icons/better-bookmark-96.png"
   }
 }
